# Apollo-Care-Protocol

./: .editorconfig  .gitignore  ARCHITECTURE.md  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FILE_TREE.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: ACTUARIAL_ALIGNMENT.md  AI_OPTIMIZED_ARCHITECTURE.md  BOOTSTRAP_GUIDE.md  BOOTSTRAP_VIABILITY_ANALYSIS.md  BOOTSTRAP_VIABILITY_SPEC.md  DESIGN_NOTES.md  IMPLEMENTATION_CHANGES_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  SMALL_SCALE_VIABILITY_AUDIT.md  SOLANA_BEST_PRACTICES.md  TOKEN_2022_INTEGRATION.md
examples/: 01-enrollment.ts  02-claims.ts  03-staking.ts  04-protocol-monitor.ts  README.md
programs/apollo_claims/: Cargo.toml
programs/apollo_claims/src/: ai_oracle.rs  errors.rs  events.rs  lib.rs  state.rs
programs/apollo_claims/src/instructions/: ai_processing.rs  attestation.rs  fast_lane.rs  initialize.rs  mod.rs  oracle.rs  resolution.rs  submission.rs
programs/apollo_core/: Cargo.toml
programs/apollo_core/src/: lib.rs  phase.rs
programs/apollo_governance/: Cargo.toml
programs/apollo_governance/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_governance/src/instructions/: emergency.rs  initialize.rs  mod.rs  multisig.rs
programs/apollo_membership/: Cargo.toml
programs/apollo_membership/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_membership/src/instructions/: contributions.rs  coverage.rs  enrollment.rs  initialize.rs  mod.rs
programs/apollo_reinsurance/: Cargo.toml
programs/apollo_reinsurance/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_reinsurance/src/instructions/: accumulator.rs  initialize.rs  mod.rs  recovery.rs  treaties.rs
programs/apollo_reserves/: Cargo.toml  STACK_ISSUE.md
programs/apollo_reserves/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_reserves/src/instructions/: ibnr.rs  initialize.rs  mod.rs  payouts.rs  phase.rs  phase_management.rs  routing.rs  vaults.rs
programs/apollo_risk_engine/: Cargo.toml
programs/apollo_risk_engine/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_risk_engine/src/instructions/: car.rs  initialize.rs  mod.rs  rating.rs  zones.rs
programs/apollo_staking/: Cargo.toml
programs/apollo_staking/src/: errors.rs  events.rs  lib.rs  state.rs
programs/apollo_staking/src/instructions/: initialize.rs  mod.rs  rewards.rs  slashing.rs  staking.rs
scripts/: deploy-devnet.sh  deploy-mainnet.sh  initialize.ts
sdk/: README.md  package.json  tsconfig.json  tsup.config.ts
sdk/src/: client.ts  constants.ts  index.ts  types.ts  utils.ts
tests/: apollo_claims.ts  apollo_governance.ts  apollo_membership.ts  apollo_reinsurance.ts  apollo_reserves.ts  apollo_risk_engine.ts  apollo_staking.ts  bootstrap_viability.ts  integration.ts
tests/utils/: helpers.ts  index.ts
