# Cargo.toml - Apollo Care Protocol Workspace

[workspace]
members = [
    "programs/apollo_core",
    "programs/apollo_membership",
    "programs/apollo_reserves",
    "programs/apollo_risk_engine",
    "programs/apollo_claims",
    "programs/apollo_governance",
    "programs/apollo_staking",
    "programs/apollo_reinsurance"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/apollocare/apollo-care-protocol"
authors = ["Apollo Care Team <dev@apollocare.io>"]

[workspace.dependencies]
# Using Anchor 0.29.0 for Solana 1.18 compatibility
# Note: 0.30+ requires Rust nightly/edition2024 for some deps
# Reference: https://solana.com/docs/core/programs
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18"

# Patch problematic edition2024 crates with older versions
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
