# programs/apollo_reserves/Cargo.toml

[package]
name = "apollo_reserves"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "apollo_reserves"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
apollo_core = { path = "../apollo_core", features = ["cpi"] }
apollo_governance = { path = "../apollo_governance", features = ["cpi"] }
