# programs/apollo_staking/Cargo.toml

[package]
name = "apollo_staking"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "apollo_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
spl-token-2022.workspace = true
apollo_core = { path = "../apollo_core", features = ["cpi"] }
apollo_governance = { path = "../apollo_governance", features = ["cpi"] }
